// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > should match the snapshot - error 1`] = `
<div
  class="nhsuk-form-group nhsuk-form-group--error"
>
  <label
    class="nhsuk-label"
    for="select_:r2:"
    id="select_:r2:--label"
  >
    Choose a country
  </label>
  <span
    class="nhsuk-error-message"
    for="select_:r2:"
    id="select_:r2:--error-message"
  >
    <span
      class="nhsuk-u-visually-hidden"
    >
      Error
      :
    </span>
    Please choose one
  </span>
  <select
    aria-labelledby="select_:r2:--label"
    class="nhsuk-select nhsuk-select--error"
    data-testid="select"
    id="select_:r2:"
    name="select_:r2:"
  >
    <option
      value="england"
    >
      England
    </option>
    <option
      value="northern-ireland"
    >
      Northern Ireland
    </option>
    <option
      value="scotland"
    >
      Scotland
    </option>
    <option
      value="wales"
    >
      Wales
    </option>
    <option
      value="channel-islands"
    >
      Channel Islands
    </option>
    <option
      value="isle-of-man"
    >
      Isle of Man
    </option>
  </select>
</div>
`;

exports[`Select > should match the snapshot - hint 1`] = `
<div
  class="nhsuk-form-group"
>
  <label
    class="nhsuk-label"
    for="select_:r1:"
    id="select_:r1:--label"
  >
    Choose a country
  </label>
  <div
    class="nhsuk-hint"
    for="select_:r1:"
    id="select_:r1:--hint"
  >
    If you are from the Guernsey or Jersey, please select Channel Islands
  </div>
  <select
    aria-describedby="select_:r1:--hint"
    aria-labelledby="select_:r1:--label"
    class="nhsuk-select"
    data-testid="select"
    id="select_:r1:"
    name="select_:r1:"
  >
    <option
      value="england"
    >
      England
    </option>
    <option
      value="northern-ireland"
    >
      Northern Ireland
    </option>
    <option
      value="scotland"
    >
      Scotland
    </option>
    <option
      value="wales"
    >
      Wales
    </option>
    <option
      value="channel-islands"
    >
      Channel Islands
    </option>
    <option
      value="isle-of-man"
    >
      Isle of Man
    </option>
  </select>
</div>
`;

exports[`Select > should match the snapshot 1`] = `
<div
  class="nhsuk-form-group"
>
  <label
    class="nhsuk-label"
    for="select_:r0:"
    id="select_:r0:--label"
  >
    Choose a country
  </label>
  <select
    aria-labelledby="select_:r0:--label"
    class="nhsuk-select"
    data-testid="select"
    id="select_:r0:"
    name="select_:r0:"
  >
    <option
      value="england"
    >
      England
    </option>
    <option
      value="northern-ireland"
    >
      Northern Ireland
    </option>
    <option
      value="scotland"
    >
      Scotland
    </option>
    <option
      value="wales"
    >
      Wales
    </option>
    <option
      value="channel-islands"
    >
      Channel Islands
    </option>
    <option
      value="isle-of-man"
    >
      Isle of Man
    </option>
  </select>
</div>
`;
